Fix wrangler.toml configuration for Cloudflare Pages

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,13 @@
 name = "thinky-fun-kids"
-type = "javascript"
-account_id = ""
-workers_dev = true
-route = ""
-zone_id = ""
-
-[build]
-command = ""
-cwd = "./"
-watch_paths = []
-
-[build.upload]
-format = "service-worker"
-
-[env.production]
-
-[triggers.crons]
+main = "index.js"
+compatibility_date = "2024-01-01"
 
 [site]
 bucket = "."
 include = ["*.html", "*.css", "*.js", "images/**"]
-exclude = ["node_modules", ".git", ".gitignore"]
+exclude = ["node_modules", ".git", ".gitignore", "*.md"]
+
+[[routes]]
+pattern = "*"
+zone_name = "example.com"
+
